index.css
/* ... */
.StoryTiles .Tile .Tile--inner:visited {
    border: none;
    text-decoration: none;
}

.StoryTiles .Tile .Tile--inner-content {
    max-width: 1190px;
    margin: auto;
    position: relative;
    width: 100%;
    height: 100%;
}

.StoryTiles .Tile .text-part {
    padding: 30px;
    position: absolute;
    z-index: 2;
}

@media (max-width: 961px) {
    .StoryTiles .Tile .text-part {
        padding: 24px 30px 10px;
    }
}

@media (max-width: 568px) {
    .StoryTiles .Tile .text-part {
        padding: 20px 14px;
    }
}

.StoryTiles .Tile .section,
.StoryTiles .Tile .title,
.StoryTiles .Tile .rubrik {
    pointer-events: none;
    z-index: 2;
    font-size: 20px;
    color: #25E3D0;
    text-transform: uppercase;
    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
    text-align: left;
    margin: 0;
}

.StoryTiles .Tile[data-section='Politics'] .section {
  color: #e3120b;
}

.StoryTiles .Tile[data-section='Business & economics'] .section {
  color: #08c5b2;
}

.StoryTiles .Tile[data-section='Science & technology'] .section {
  color: #f39200;
}

.StoryTiles .Tile[data-section='History'] .section {
  color: #4e64b5;
}

.StoryTiles .Tile .text-part .rubric{
    color: #fff;
}

@media (max-width: 961px) {
    .StoryTiles .Tile .section,
    .StoryTiles .Tile .title,
    .StoryTiles .Tile .rubrik {
        font-size: 20px;
    }
}

.StoryTiles .Tile .section {
    font-size: 26px;
    line-height: 20px;
    margin-bottom: 5px;
}

@media (max-width: 961px) {
    .StoryTiles .Tile .section {
        font-size: 22px;
        line-height: 22px;
    }
}

.StoryTiles .Tile .title {
    top: 45px;
    font-size: 48px;
    line-height: 38px;
    font-family: Neutra2Display-Titling;
    color: #fff;
    margin-bottom: 30px;
}

@media (max-width: 961px) {
    .StoryTiles .Tile .title {
        top: 40px;
        font-size: 30px;
        line-height: 30px;
        margin-bottom: 0;
        font-size: 34px;
    }
}

@media (max-width: 480px) {
    .StoryTiles .Tile .title {
        margin-bottom: 0;
        font-size: 22px;
        line-height: 20px;
    }
}

.StoryTiles .Tile .rubrik {
    display: block;
    /* Fallback for non-webkit */
    display: -webkit-box;
    height: 60px;
    /* Fallback for non-webkit */
    margin: 0;
    font-size: 30px;
    line-height: 1;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    text-transform: initial;
    color: #fff;
    overflow: hidden;
    text-overflow: ellipsis;
}

@media (max-width: 760px) {
    .StoryTiles .Tile .rubrik {
        display: none;
    }
}

@media (min-width: 961px) {
    .StoryTiles .Tile .rubrik {
        max-width: 550px;
        max-height: initial;
        height: auto;
        max-height: initial;
        overflow: visible;
        display: block;
    }
}

@media (max-width: 961px) {
    .StoryTiles .Tile .rubrik {
        font-size: 22px;
        line-height: 22px;
        margin-top: 20px;
    }
}

.StoryTiles .Tile .Tile--image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: auto;
    transition: all 0.8s ease-in-out;
}

@media (max-width: 568px) {
    .StoryTiles .Tile .Tile--image {
        transform: scale(1.5);
        transform-origin: top;
    }
}

@media (max-width: 480px) {
    .StoryTiles .Tile .Tile--image {
        transform: scale(1.8);
        transform-origin: top;
    }
}

@media (max-width: 380px) {
    .StoryTiles .Tile .Tile--image {
        transform: scale(2.4);
        transform-origin: top;
    }
}

.StoryTiles .Tile {
    position: relative;
}

.StoryTiles .Tile:before {
    display: block;
    content: '';
    width: 100%;
    padding-top: 25%;
}

.StoryTiles .Tile .image-grad {
    pointer-events: none;
    width: 100%;
    height: 100%;
    background: linear-gradient(to right, #000000 0%, rgba(0, 0, 0, 0) 100%);
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
    width: 60%;
    height: 105%;
    opacity: 0.8;
}


.StoryTiles .Tile:nth-of-type(5n+2) .image-grad,
.StoryTiles .Tile:nth-of-type(5n+3) .image-grad,
.StoryTiles .Tile:nth-of-type(5n+4) .image-grad,
.StoryTiles .Tile:nth-of-type(5n+5) .image-grad {
    display: none;
}




.StoryTiles .Tile:nth-child(8) .section {
    color: #E3120b;
}

.StoryTiles .Tile:nth-child(3) .section {
    color: #07c5b2;
}

.StoryTiles .Tile:nth-child(2) .section {
    color: #f5a816;
}

.StoryTiles .Tile:nth-of-type(5n+2),
.StoryTiles .Tile:nth-of-type(5n+3),
.StoryTiles .Tile:nth-of-type(5n+4),
.StoryTiles .Tile:nth-of-type(5n+5) {
    -webkit-flex: 1 1 25%;
    -ms-flex: 1 1 25%;
    flex: 1 1 25%;
    border-right: 10px solid #000;
    position: relative;
    width: 25%;
    float: left;
}

.StoryTiles .Tile:nth-of-type(5n+2) .rubric,
.StoryTiles .Tile:nth-of-type(5n+3) .rubric,
.StoryTiles .Tile:nth-of-type(5n+4) .rubric,
.StoryTiles .Tile:nth-of-type(5n+5) .rubric{
    display: none;
}

.StoryTiles .Tile:nth-of-type(5n+2) .Tile--image,
.StoryTiles .Tile:nth-of-type(5n+3) .Tile--image,
.StoryTiles .Tile:nth-of-type(5n+4) .Tile--image,
.StoryTiles .Tile:nth-of-type(5n+5) .Tile--image{
    height: 100%;
}

@media (max-width: 1190px) {
    .StoryTiles .Tile:nth-of-type(5n+2),
    .StoryTiles .Tile:nth-of-type(5n+3),
    .StoryTiles .Tile:nth-of-type(5n+4),
    .StoryTiles .Tile:nth-of-type(5n+5) {
        min-width: 25%;
    }
}

@media (max-width: 568px) {
    .StoryTiles .Tile:nth-of-type(5n+2),
    .StoryTiles .Tile:nth-of-type(5n+3),
    .StoryTiles .Tile:nth-of-type(5n+4),
    .StoryTiles .Tile:nth-of-type(5n+5) {
        min-height: initial !important;
        max-height: 200px;
    }
}
/* ... */

